--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 	<link rel="stylesheet" href="css/style.css">
 <body>
+
+	<nav class="top-navigation">
+		<div class="content"></div>
+	</nav>
 	
 </body>
 </html>
