--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 <body>
 
 	<nav class="top-navigation">
-		<div class="content"></div>
+		<div class="content">
+			<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+			<ul class="links">
+				<li class="active">Meet Karma</li>
+				<li>How it Works</li>
+				<li>Store</li>
+				<li>Blog</li>
+				<li>Help</li>
+				<li>Login</li>
+			</ul>
+
+		</div>
+
 	</nav>
 	
 </body>
