--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> 
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
+
 <body>
 
 	<nav class="top-navigation">
@@ -55,6 +58,25 @@
 			</ul>
 		</div>
 	</section>
+	<footer class="social">
+		<div class="content">
+			<hr />
+			<h5>Join us on</h5>
+			<ul class="icons">
+				<li>
+					<i class="fa fa-twitter"></i>
+				</li>
+				<li>
+					<i class="fa fa-facebook"></i>
+				</li>
+				<li>
+					<i class="fa fa-instagram"></i>
+				</li>
+			</ul>
+		</div>
+	</footer>
+
+
 
 	
 </body>
