--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> 
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> 
 	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+
 
 <body>
 
@@ -63,16 +65,20 @@
 			<hr />
 			<h5>Join us on</h5>
 			<ul class="icons">
-				<li>
-					<i class="fa fa-twitter"></i>
+				<li class="twitter">
+					<i class="fa fa-twitter">
+					</i>
 				</li>
-				<li>
+				<li class="facebook">
 					<i class="fa fa-facebook"></i>
 				</li>
-				<li>
+				<li class="instagram">
 					<i class="fa fa-instagram"></i>
 				</li>
 			</ul>
+			<span class="copy">
+                © Karma Mobility, Inc.
+           	</span>
 		</div>
 	</footer>
 
