--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
+	<title>Ori's Site Clone!</title>
 	<link href="//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css">
 	<link rel="stylesheet" href="CSS/style.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> 
 	<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 	<link rel="stylesheet" href="CSS/font-awesome.min.css">
-
-
+</head>
 <body>
 
 	<nav class="top-navigation">
